# llfcChat

./: .gitignore  CMakeLists.txt  README.md
ChatServer/: AsioServicePool.cpp  AsioServicePool.h  CMakeLists.txt  CServer.cpp  CServer.h  CSession.cpp  CSession.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServer.cpp  ChatServiceImpl.cpp  ChatServiceImpl.h  ConfigMgr.cpp  ConfigMgr.h  LogicSystem.cpp  LogicSystem.h  MsgNode.cpp  MsgNode.h  MySqlMgr.cpp  MySqlMgr.h  MySqlPool.cpp  MySqlPool.h  RedisMgr.cpp  RedisMgr.h  Singleton.h  StatusGrpcClient.cpp  StatusGrpcClient.h  UserMgr.cpp  UserMgr.h  config.ini  const.cpp  const.h
GateServer/: AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GateServer.cpp  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MySqlMgr.cpp  MySqlPool.h  RedisMgr.cpp  RedisMgr.h  Singleton.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VarifyGrpcClient.cpp  VarifyGrpcClient.h  config.ini  const.h  message.proto
StatusServer/: AsioIOServicePool.cpp  CMakeLists.txt  ChatGrpcClient.h  MySqlMgr.h  MySqlPool.cpp  StatusServer.cpp  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  const.h
VarifyServer/: config.js  config.json  const.js  email.js  message.proto  package-lock.json  package.json  proto.js  redis.js  server.js
common/: CMakeLists.txt  log.h
docker/: Dockerfile  install-opensource.sh
docker/install/grpc/: install_grpc.sh
docker/scripts/: docker_into.sh  docker_run.sh
llfcChatClient/build-llfcchat-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  llfcchat  llfcchat.cbp  rules.ninja
llfcChatClient/build-llfcchat-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-6ca3d4a32113c3c83e15.json  cmakeFiles-v1-94a39a3fc9818a0d5e58.json  codemodel-v2-9b0856ae8cd5c8341e63.json  index-2025-01-15T08-37-47-0154.json  target-llfcchat-Debug-66f938850b5fd05f841e.json  target-llfcchat_autogen-Debug-73e0381f0a697d44cbb7.json
llfcChatClient/build-llfcchat-Desktop-Debug/llfcchat_autogen/: moc_predefs.h  mocs_compilation.cpp
llfcChatClient/build-llfcchat-Desktop-Debug/llfcchat_autogen/EWIEGA46WW/: moc_BubbleFrame.cpp  moc_ChatItemBase.cpp  moc_ChatView.cpp  moc_MessageTextEdit.cpp  moc_PictureBubble.cpp  moc_TextBubble.cpp  moc_adduseritem.cpp  moc_applyfriend.cpp  moc_applyfrienditem.cpp  moc_applyfriendlist.cpp  moc_applyfriendpage.cpp  moc_authenfriend.cpp  moc_chatdialog.cpp  moc_chatpage.cpp  moc_chatuserlist.cpp  moc_chatuserwid.cpp  moc_clickedbtn.cpp  moc_clickedlabel.cpp  moc_clickedoncelabel.cpp  moc_contactuserlist.cpp  moc_conuseritem.cpp  moc_customizeedit.cpp  moc_customizetextedit.cpp  moc_findfaildlg.cpp  moc_findsuccessdlg.cpp  moc_friendinfopage.cpp  moc_friendlabel.cpp  moc_grouptipitem.cpp  moc_httpmgr.cpp  moc_invaliditem.cpp  moc_lineitem.cpp  moc_listitembase.cpp  moc_loadingdlg.cpp  moc_logindialog.cpp  moc_mainwindow.cpp  moc_registerdialog.cpp  moc_resetdialog.cpp  moc_searchlist.cpp  moc_statelabel.cpp  moc_statewidget.cpp  (+2 more)
llfcChatClient/build-llfcchat-Desktop-Debug/llfcchat_autogen/include/: ui_adduseritem.h  ui_applyfriend.h  ui_applyfrienditem.h  ui_applyfriendpage.h  ui_authenfriend.h  ui_chatdialog.h  ui_chatpage.h  ui_chatuserwid.h  ui_conuseritem.h  ui_findfaildlg.h  ui_findsuccessdlg.h  ui_friendinfopage.h  ui_friendlabel.h  ui_grouptipitem.h  ui_lineitem.h  ui_loadingdlg.h  ui_logindialog.h  ui_registerdialog.h  ui_resetdialog.h
llfcChatClient/llfcchat/: CMakeLists.txt  llfcchat.pro  logindialog.cpp  registerdialog.cpp  resetdialog.cpp  tcpmgr.cpp
llfcChatClient/llfcchat/style/: stylesheet.qss
test/: CMakeLists.txt
test/src/: testjson.cpp  testredis.cpp
